--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,18 @@
   <body>
 
     <% if flash[:notice] %>
-      <p><%= flash[:notice] %></p>
+      <div class="alert alert-info">
+        <%= flash[:notice] %>
+      </div>
     <% end %>
     <% if flash[:alert] %>
-      <p><%= flash[:alert] %></p>
+      <div class="alert alert-danger">
+        <%= flash[:alert] %>
+      </div>
     <% end %>
 
     <% if user_signed_in? %>
-      <p><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></p>
+      <%= render partial: "layouts/header" %>
     <% end %>
 
     <%= yield %>
